some files are changed

--- a/client-order-details.html
+++ b/client-order-details.html
@@ -215,17 +215,17 @@
                 <img src="assets/img/user.png" class="img-responsive">
               </div>
               <section>
-                <h2><span class="profile"><span>Admin</span></span></h2>
+                <h2><span class="profile"><span>Client</span></span></h2>
               </section>
             </a>
             <!--Login Area Dropdown-->
             <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
-              <li class="username"><a>Admin</a></li>
-              <li class="email"><a>admin.com</a></li>
+              <li class="username"><a>Client</a></li>
+              <li class="email"><a>client@vsplash.com</a></li>
               <!--Avatar Area-->
 
               <li class="edit">
-                <a href="profile.html" class="pull-right">Edit Profile</a>
+                <a href="client-profile.html" class="pull-right">Edit Profile</a>
               </li>
 
               <li class="dropdown-footer">
