--- a/client-register.html
+++ b/client-register.html
@@ -30,7 +30,7 @@
 </head>
 <!--Head Ends-->
 <!--Body-->
-<body>
+<body class="fullscreen_bg">
   <div class="register-container animated fadeInDown">
     <div class="registerbox bg-darkgray">
       <div class="log-reg-img">
