--- a/employee-login.html
+++ b/employee-login.html
@@ -30,7 +30,7 @@
 </head>
 <!--Head Ends-->
 <!--Body-->
-<body>
+<body class="fullscreen_bg">
   <div class="login-container animated fadeInDown">
     <div class="loginbox bg-darkgray" id="login">
       <div class="log-reg-img">
