--- a/job-description.html
+++ b/job-description.html
@@ -134,7 +134,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -300,14 +300,14 @@
       <!-- Page Breadcrumb -->
       <div class="page-breadcrumbs">
         <ul class="breadcrumb">
-          <li>
-            <i class="fa fa-home"></i>
-            <a href="#">Dashboard</a>
-          </li>
-          <li class="active">
-            <a href="#">Job Description</a>
-          </li>
-        </ul>
+                    <li>
+                        <i class="fa fa-home"></i>
+                        <a href="#">Dashboard</a>
+                    </li>
+                    <li class="active">
+                        Job Description
+                    </li>
+                </ul>
         <div class="header-right">
           <input type="button" class="btn cust-btn" value="Accept"  onclick="javascript: Notify('Your accepted job successfully...', 'top-right', '5000', 'success', 'fa-check', true); return false;">
           <a type="submit" href="" data-toggle="modal" data-target=".create-suborder" class="btn cust-btn">Create Suborder</a>
@@ -393,8 +393,7 @@
                           <th>Cost</th>
                           <th>Effort Hours</th>
                           <th>Additional Informatin</th>
-                          <th>Acceptance</th>
-                          <th>Action</th>
+                          <th style="width:130px;">Acceptance</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -411,9 +410,7 @@
                             </label>
                           </div>
                         </td>
-                        <td>
-                          <a data-toggle="tooltip" data-placement="top" data-original-title="Proceeded to Pay" class="fa fa-money edit payment-fa"></a>
-                        </td>
+
                       </tr>
 
                   </tbody>
