--- a/client-index.html
+++ b/client-index.html
@@ -134,7 +134,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -370,70 +370,81 @@
                         <div class="tickets-container">
                           <div class="table-responsive">
                             <table class="table table-striped table-design last-child-two">
-                              <thead>
-                                <tr>
-                                  <th>Order Date</th>
-                                  <th>Job Title</th>
-                                  <th>Description</th>
-                                  <th>Acceptance</th>
-                                  <th>Status</th>
-                                  <th>Action</th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td>05-03-18</td>
-                                  <td>Deep Employee Report</td>
-                                  <td>Public Information</td>
-                                  <td>Approved </td>
-                                  <td>
-                                    <label class="switch-btn switch-flat">
-                                      <input class="switch-input" type="checkbox" />
-                                      <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
-                                      <span class="switch-handle"></span>
-                                    </label>
-                                  </td>
-                                  <td>
-                                    <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
-                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download assign edit-fa"></a>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td>11-03-18</td>
-                                  <td>Brand Endorsement Report</td>
-                                  <td>eCommerce</td>
-                                  <td>Rejected</td>
-                                  <td>
-                                    <label class="switch-btn switch-flat">
-                                      <input class="switch-input" type="checkbox" />
-                                      <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
-                                      <span class="switch-handle"></span>
-                                    </label>
-                                  </td>
-                                  <td>
-                                    <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
-                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download assign edit-fa"></a>
-                                  </td>
-                                </tr>
-                                <tr>
-                                  <td>22-03-18</td>
-                                  <td>Smith Employee Profile Report</td>
-                                  <td>Public Information</td>
-                                  <td>Approved</td>
-                                  <td>
-                                    <label class="switch-btn switch-flat">
-                                      <input class="switch-input" type="checkbox" />
-                                      <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
-                                      <span class="switch-handle"></span>
-                                    </label>
-                                  </td>
-                                  <td>
-                                    <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
-                                    <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download assign edit-fa"></a>
-                                  </td>
-                                </tr>
-                              </tbody>
-                            </table>
+                          <thead>
+                            <tr>
+                              <th>Order Date</th>
+                              <th>Type</th>
+                              <th style="width:270px">Product Category</th>
+                              <th>Acceptance</th>
+                              <th>Acceptance Date/Time </th>
+                              <th>Assigned To</th>
+                              <th>Status</th>
+                              <th>Action</th>
+                            </tr>
+                          </thead>
+                          <tbody>
+                            <tr>
+                              <td>03-03-18</td>
+                              <td>Foundation</td>
+                              <td>Public Information</td>
+                              <td class="green">Approved </td>
+                              <td>03-04-18 5:30 AM</td>
+                              <td>James</td>
+                              <td>
+                                <label class="switch-btn switch-flat">
+                                  <input class="switch-input" type="checkbox">
+                                  <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
+                                  <span class="switch-handle"></span>
+                                </label>
+                              </td>
+                              <td>
+                                <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>04-03-18</td>
+                              <td>Compliance</td>
+                              <td>eCommerce</td>
+                              <td class="red">Rejected</td>
+                              <td>-</td>
+                              <td>-</td>
+                              <td>
+                                <label class="switch-btn switch-flat">
+                                  <input class="switch-input" type="checkbox">
+                                  <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
+                                  <span class="switch-handle"></span>
+                                </label>
+                              </td>
+                              <td>
+                                <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+
+                              </td>
+                            </tr>
+                            <tr>
+                              <td>04-15-18</td>
+                              <td>Custom</td>
+                              <td>Public Information</td>
+                              <td class="green">Approved</td>
+                              <td>04-16-18 3:30 PM</td>
+                              <td>Riya</td>
+                              <td>
+                                <label class="switch-btn switch-flat">
+                                  <input class="switch-input" type="checkbox">
+                                  <span class="switch-label" data-on="Completed" data-off="Inprogress"></span>
+                                  <span class="switch-handle"></span>
+                                </label>
+                              </td>
+                              <td>
+                                <a href="client-order-details.html" data-toggle="tooltip" data-placement="top" data-original-title="View" class="fa fa-eye edit edit-fa"></a>
+                                <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
                           </div>
                         </div>
                       </div>
