--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -31,7 +31,7 @@
 </head>
 <!--Head Ends-->
 <!--Body-->
-<body>
+<body class="payment-info">
   <div class="login-container animated fadeInDown">
     <div class="loginbox bg-darkgray" id="login">
       <div class="log-reg-img">
