files are updated

--- a/client-index.html
+++ b/client-index.html
@@ -388,7 +388,7 @@
                               <td>Foundation</td>
                               <td>Public Information</td>
                               <td class="green">Approved </td>
-                              <td>03-04-18 5:30 AM</td>
+                              <td>03-04-18 05:40:55 EDT</td>
                               <td>James</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -428,7 +428,7 @@
                               <td>Custom</td>
                               <td>Public Information</td>
                               <td class="green">Approved</td>
-                              <td>04-16-18 3:30 PM</td>
+                              <td>04-16-18 02:40:55 EDT</td>
                               <td>Riya</td>
                               <td>
                                 <label class="switch-btn switch-flat">
