--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -406,7 +406,7 @@
                               <td>Foundation</td>
                               <td>Public Information</td>
                               <td class="green">Approved </td>
-                              <td>03-04-18 5:30 AM</td>
+                              <td>03-04-18 04:43:55 EDT</td>
                               <td>James</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -446,7 +446,7 @@
                               <td>Custom</td>
                               <td>Public Information</td>
                               <td class="green">Approved</td>
-                              <td>04-16-18 3:30 PM</td>
+                              <td>04-16-18 05:40:55 EDT</td>
                               <td>Riya</td>
                               <td>
                                 <label class="switch-btn switch-flat">
@@ -481,6 +481,7 @@
   <!-- Main Container -->
 
 </div>
+<div class="footer">Copyright <i class="fa fa-copyright"></i> 2018 PIR All Rights Reserved</div>
 <!-- accept request -->
 <div class="modal fade accept-request in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-sm">
