--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -315,6 +315,7 @@
 
 
                 <div class="row">
+
                   <div class="col-sm-4">
                     <div class="form-group">
                       <label for="inputsm">Research Type</label>
@@ -329,15 +330,19 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="form-group">
-                      <label for="inputsm">First Name</label>
+                      <label for="inputsm">Subject’s First Name</label>
                       <span class="input-icon icon-right">
                         <input type="text" class="form-control">
                       </span>
+                      <span  class="cust-popover" data-container="body" data-titleclass="bordered-blue" data-class="" data-toggle="popover" data-placement="top" data-content="if the Subject only uses a single name, that name should be entered into the Subject’s First Name field." data-original-title="" title="" class="cust-popover"><i class="fa fa-question-circle"></i></span>
+                      <!-- <a href="javascript:void(0);" class="btn btn-default" data-container="body" data-titleclass="bordered-blue" data-class="" data-toggle="popover" data-placement="top" data-title="PopOver On Click" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." data-original-title="" title="">
+                                                        Popover on Click
+                                                    </a> -->
                     </div>
                   </div>
                   <div class="col-sm-4">
                     <div class="form-group">
-                      <label for="inputsm">Last Name</label>
+                      <label for="inputsm">Subject’s Last Name</label>
                       <span class="input-icon icon-right">
                         <input type="text" class="form-control">
                       </span>
@@ -464,19 +469,12 @@
                     <div class="checkbox mrg-top-20">
                       <label>
                         <input type="checkbox" class="colored-primary" id="terms-conditions" checked>
-                        <span class="text darkgray">Is the Product/service targeted towards children below 18 years of age?</span>
+                        <span class="text darkgray">Is this Product Category targeted towards children below 18 years of age?</span>
                       </label>
                     </div>
                   </div>
                 </div>
-                <div class="row">
-                  <div class="col-sm-12">
-                    <div class="form-group">
-                      <label for="inputsm">Additional Details</label>
-                      <textarea class="form-control" rows="3" id="form-field-8"></textarea>
-                    </div>
-                  </div>
-                </div>
+
 
                 <div class="row">
                   <div class="col-sm-4">
@@ -501,6 +499,118 @@
                       <span class="input-icon icon-right">
                         <input =="text" class="form-control">
                       </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 1</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 2</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 3</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 4</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 5</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label for="inputsm">Subject’s Social Media Sites 6</label>
+                      <span class="input-icon icon-right">
+                        <input =="text" class="form-control">
+                      </span>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="form-group">
+                      <label for="inputsm">select dates</label>
+                      <span class="input-icon icon-right">
+                        <input class="form-control date-picker" id="id-date-picker-1" type="text" data-date-format="dd-mm-yyyy">
+                        <i class="fa fa-calendar"></i>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="form-group">
+                      <label for="inputsm">Additional details regarding the research to be conducted</label>
+                      <textarea class="form-control" rows="3" id="form-field-8"></textarea>
                     </div>
                   </div>
                 </div>
@@ -602,6 +712,7 @@ $(document).ready(function(){
 </script>
 <script>
 //--Bootstrap Date Picker--
+
 
 
 
