--- a/job-description.html
+++ b/job-description.html
@@ -328,45 +328,57 @@
           <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Job Title:</label>
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Research Type:</label>
                 <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">Deep Employee Report</p>
+                  <p class="form-control-static lbl-pad-top-btm">Foundation Report</p>
                 </div>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Job Description:</label>
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Subject’s First Name:</label>
                 <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">Deep Employment Report</p>
+                  <p class="form-control-static lbl-pad-top-btm">Sample Name</p>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="row">
             <div class="col-sm-6">
               <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Assigned to:</label>
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Subject’s Last Name:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Sample Name</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Product Category:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Vehicles</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Service Type:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Standard</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Price:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">$800</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Assigned To:</label>
                 <div class="col-sm-7">
                   <p class="form-control-static lbl-pad-top-btm">James</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Email:</label>
-                <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">james@pir.com</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Mobile Number:</label>
-                <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">(541) 754-3010</p>
                 </div>
               </div>
             </div>
@@ -375,6 +387,60 @@
                 <label class="control-label col-sm-5 lbl-pad-top" for="email">Status:</label>
                 <div class="col-sm-7">
                   <p class="form-control-static lbl-pad-top-btm">Active</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr class="cust-hr-2">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Primary Competitors 1:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Competitor Name</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Primary Competitors 2:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Competitor Name</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Primary Competitors 3:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Competitor Name</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr class="cust-hr-2">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Subject’s Social Media Sites 1:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Facebook</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Subject’s Social Media Sites 3:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Twitter</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="form-group">
+                <label class="control-label col-sm-5 lbl-pad-top" for="email">Subject’s Social Media Sites 4:</label>
+                <div class="col-sm-7">
+                  <p class="form-control-static lbl-pad-top-btm">Linkedin</p>
                 </div>
               </div>
             </div>
