--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -566,16 +566,16 @@
                         <input type="text" class="form-control">
                       </span>
                     </div> -->
-                    <div class="form-group col-md-6 c-nopaddingleft">
+                    <div class="form-group col-md-7 c-nopaddingleft">
                       <label for="inputsm">Service Type</label>
                       <select class="form-control">
                           <option>Select Service</option>
-                          <option>Standard</option>
-                          <option>Rush</option>
-                          <option>Next Up</option>
+                          <option>Standard (4-5 business days)</option>
+                          <option>Rush (2-3 business days)</option>
+                          <option>Next Up (24 hours)</option>
                       </select>
                     </div>
-                      <div class="form-group col-sm-6 c-nopaddingright">
+                      <div class="form-group col-sm-5 c-nopaddingright">
                         <label for="inputsm">Price</label>
                         <span class="input-icon icon-right">
                           <input =="text" class="form-control" placeholder="$500" disabled>
@@ -796,7 +796,7 @@
 
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        <h4 class="modal-title" id="mySmallModalLabel">Additional <details></details></h4>
+        <h4 class="modal-title" id="mySmallModalLabel">Additional details</h4>
       </div>
       <div class="modal-body">
         <div class="row">
