updated modal in rit

--- a/research-intake-form.html
+++ b/research-intake-form.html
@@ -791,7 +791,7 @@
 </div>
 
 <div class="modal fade custom-report in" id="custom-report" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-sm">
+  <div class="modal-dialog modal-md">
     <div class="modal-content">
 
       <div class="modal-header">
