--- a/employee-index.html
+++ b/employee-index.html
@@ -134,7 +134,7 @@
                       Today, March 28
                     </span>
                     <span class="pull-right">
-                      
+
                       <i class="wi wi-cloudy"></i>
                     </span>
                   </li>
@@ -348,7 +348,7 @@
             <div class="widget-header bordered-bottom bordered-themesecondary widget-cust">
               <i class="widget-icon fa fa-tags themesecondary"></i>
               <span class="widget-caption themesecondary">Order Details</span>
-              <div style="">
+            <div style="">
                 <div class="form-group cust-select-ctrl">
                 <select class="form-control" name="country" data-bv-field="country">
                   <option value="">Select Reports</option>
@@ -356,7 +356,7 @@
                   <option value="">Monthly Report</option>
                 </select>
               </div>
-              <div class="form-group cust-select-ctrl">
+              <!-- <div class="form-group cust-select-ctrl">
               <select class="form-control" name="country" data-bv-field="country">
                 <option value="">Select Orders</option>
                 <option value="">Total Jobs</option>
@@ -364,7 +364,7 @@
                 <option value="">Pending Jobs</option>
                 <option value="">Jobs in progress</option>
               </select>
-            </div>
+            </div> -->
               </div>
             </div><!--Widget Header-->
             <div class="widget-body  no-padding">
