--- a/job-description.html
+++ b/job-description.html
@@ -444,6 +444,18 @@
                 </div>
               </div>
             </div>
+
+          </div>
+          <hr class="cust-hr-2">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="form-group col-md-12">
+                <label class="control-label  lbl-pad-top" for="email">Additional details regarding the research to be conducted:</label>
+                <div class="">
+                  <p class="form-control-static lbl-pad-top-btm">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="form-title">
             Sub Order Information
